--- a/dashboard/static/css/styles.css
+++ b/dashboard/static/css/styles.css
@@ -1,7 +1,43 @@
 .sidebar-nav {
-  margin-top: 20px;
-  margin-right: 15px;
-  margin-left: 15px;
+  margin: 10px;
+/*  margin-right: 15px;*/
+/*  margin-left: 15px;*/
   padding: 0;
   list-style: none;
+}
+
+.profile-photo {
+  border-radius: 50%; 
+  max-width: 60%; 
+  aspect-ratio: 1 / 1; 
+  object-fit: cover;
+}
+
+.profile-panel {
+  padding: 30px 0 10px 0;
+  font-size: 90%;
+}
+
+.profile-links{
+  padding: 10px 30%;
+}
+
+.link-column {
+  float: left;
+  width: 33.33%;
+}
+
+.link-icon {
+  font-size:180%;
+}
+
+.col-sm-2{
+  padding: 40px 0;
+/*  background-color: #f6f6f6;*/
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  min-height: 100vh;
+}
+
+.col-sm-10{
+  background-color: #f6f6f6;
 }
