--- a/dashboard/templates/base_generic.html
+++ b/dashboard/templates/base_generic.html
@@ -14,18 +14,34 @@
     <!-- Add additional CSS in static file -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <script src="https://kit.fontawesome.com/ab17ca19a7.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-2">
+        <div class="col-sm-2" align="center">
           {% block sidebar %}
+          {% load static %}
+            <img
+              class="profile-photo"
+              src="{% static 'images/photo.PNG' %}"
+              alt="Profile photo" />  
+            <div class="profile-panel">
+              <h4>Harry Park</h4>  
+              <p class="profile-text">Computational Biology <br /> Ph.D. Candidate <br /> @ Duke-NUS Medical School</p>
+              <div class="profile-links row">
+                  <div class="link-column">
+                    <i class="fa-brands fa-github link-icon"></i>
+                  </div>
+                  <div class="link-column">
+                    <i class="fa-brands fa-linkedin link-icon"></i>
+                  </div>
+                  <div class="link-column">
+                    <i class="fa-solid fa-file link-icon"></i>
+                  </div>
+              </div>
+            </div>
             <ul class="sidebar-nav">
-              {% load static %}
-              <img
-                src="{% static 'images/photo.PNG' %}"
-                alt="Profile photo"
-                style="border-radius: 50%; max-width: 100%; aspect-ratio: 1 / 1; object-fit: cover;" />
               <li><a href="{% url 'index' %}">Dashboard</a></li>
               <li><a href="">Projects</a></li>
             </ul>
