--- a/dashboard/templates/base_generic.html
+++ b/dashboard/templates/base_generic.html
@@ -51,7 +51,7 @@
             </ul>
           {% endblock %}
         </div>
-        <div class="col-sm-10 ">
+        <div class="col-sm-10 container">
           {% block content %}
           {% endblock %}
         </div>
