--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -1,15 +1,15 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <!-- <div class="top-panel row">
+  <div class="top-panel row">
     <div class="col-8">
-      <h4>Main Dashboard</h4>
-      <p>
-        Current week: 0 / 0 week
+      <h4 class="top-panel-text">Main Dashboard</h4>
+      <p class="top-panel-text">
+        {{current_week_num}} / {{total_week_count}} week
       </p>  
     </div>
     <div class="col-4 row">
-      <div class="btn-group column" role="group">
+      <!-- <div class="btn-group column" role="group">
         <button type="button" class="btn btn-secondary">Main</button>
         <button type="button" class="btn btn-secondary">Location</button>
         <button type="button" class="btn btn-secondary">Experience</button>
@@ -17,19 +17,30 @@
       <div class="form-check form-switch column lightswitch">
         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
         <label class="form-check-label" for="flexSwitchCheckDefault"><i class="fa-regular fa-sun"></i></label>
-      </div>
+      </div> -->
     </div> 
   </div>
-  <hr style="margin: 1px 0;"> -->
+  <hr style="margin: 1px 0;">
   <div class="main-panel row">
-    {% for i in year_range %}
-      <div class="year-col">
-        {% for j in week_range %}
-          <div class="week-block">
-            <div class="week-dot"></div>
-          </div>
-        {% endfor %}
-      </div>
+    {% for year, weeks in year_week_count.items %}
+    <div class="year-col">
+      <div class="year-col-text">{{year}}</div>
+      {% for week in weeks %}
+      {% if week.week_num < current_week_num %}
+        <div class="week-block">
+            <div class="week-dot week-dot-past"></div>
+        </div>  
+      {% elif week.week_num == current_week_num %}
+        <div class="week-block">
+            <div class="week-dot week-dot-present"></div>
+        </div>  
+      {% else %}
+        <div class="week-block">
+            <div class="week-dot week-dot-future"></div>
+        </div>  
+      {% endif %}  
+      {% endfor %}
+    </div>
     {% endfor %}
   </div>
 {% endblock %}
