--- a/dashboard/templates/location.html
+++ b/dashboard/templates/location.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="top-panel row">
     <div class="col-8">
-      <h4 class="top-panel-text">Main Weekboard</h4>
+      <h4 class="top-panel-text">Location Weekboard</h4>
       <p class="top-panel-text">
         {{current_week_num}} / {{total_week_count}} week
       </p>  
