Hover action implemented so that those ones without any experiene does not show speech bubble.

--- a/templates/apps/dashboard/experience.html
+++ b/templates/apps/dashboard/experience.html
@@ -33,19 +33,21 @@
       {% elif week.week_num == current_week_num %}  
         <div class="week-block">
             <div class="week-dot blinking-background" style="--blink-color: {{ week.get_experience_color_highlight }}; --original-color: {{ week.get_experience_color }};">
-              <div class="speech-bubble" style="--highlight-color: {{ week.get_experience_color_highlight }};">
-              Week {{ week.week_num }}<br>
-                <p class="small-text"> {{ week.get_experience_label }} </p>
-              </div>
+                <div class="speech-bubble" style="--highlight-color: {{ week.get_experience_color_highlight }};">
+                Week {{ week.week_num }}<br>
+                  <p class="small-text"> {{ week.get_experience_label }} </p>
+                </div>
             </div>
         </div>
       {% else %}
         <div class="week-block">
             <div class="week-dot" style="background-color: {{ week.get_experience_color }};">
+              {% if week.has_experience_label %}
               <div class="speech-bubble" style="--highlight-color: {{ week.get_experience_color_highlight }};">
               Week {{ week.week_num }}<br>
                 <p class="small-text"> {{ week.get_experience_label }} </p>
               </div>
+              {% endif %}
             </div>
         </div>  
       {% endif %}  
