--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -135,6 +135,7 @@
 .speech-bubble {
     visibility: hidden;
     width: 7em;
+    font-size: 0.8em;
     background-color: var(--highlight-color);
     color: #fff;
     text-align: center;
@@ -144,7 +145,7 @@
     z-index: 1;
     bottom: 125%;
     left: 50%;
-    margin-left: -60px;
+    margin-left: -48px;
     opacity: 0;
     transition: opacity 0.3s;
 }
@@ -170,4 +171,41 @@
     padding: 0;
     white-space: pre-line;
     font-size: 0.5em; /* Adjust this value as needed */
+}
+
+/* Styles for the pop-up container */
+.popup {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Styles for the pop-up content */
+.popup-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+  position: relative;
+}
+
+/* Style for the close button */
+.close-button {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
